# bazel_aspect_rules_js_react

./: .bazelignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
app/react-app/: BUILD.bazel  package.json  pnpm-lock.yaml
app/react-app/config/: webpack.config.js
app/react-app/src/: react-app-env.d.ts
tools/: bazel_deps.bzl
